# freefeos

./: AUTHORS  CHANGELOG.md  LICENSE  README.md  flutter_rust_bridge.yaml  l10n.yaml  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/: gradle.properties  settings.gradle  settings.gradle.kts
example/android/app/: build.gradle  build.gradle.kts
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: freefeos.podspec
lib/: freefeos.dart  freefeos_method_channel.dart  freefeos_platform_interface.dart  freefeos_web.dart
lib/src/: freefeos_method_channel.dart  freefeos_platform_interface.dart
macos/: freefeos.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs
test/: freefeos_test.dart  method_channel_test.dart  platform_interface_test.dart  system_interface_test.dart
(+346 files in other folders)
