[package]
name = "freefeos"
version = "0.0.1"
authors = ["wyq0918dev <wyq0918dev@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Flutter 相关
flutter_rust_bridge = "=2.6.0"
irondash_engine_context = "0.5.0"
irondash_run_loop = "0.5.0"
irondash_message_channel = "0.7.0"
